--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,12 @@
+.navStyle {
+  border: 2px solid black; }
 
+.leftStyle {
+  border: 2px solid blue;
+  height: 50px; }
+
+.rightStyle {
+  border: 2px solid red;
+  height: 50px; }
 
 /*# sourceMappingURL=main.css.map */
