--- a/partials/which.html
+++ b/partials/which.html
@@ -1,11 +1,19 @@
 <div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12 name-which">
+      Greetings {{name}}!
+    </div>
+  </div><!--end name row-->
   <div class="row row-eq-height">
-    <div class="col-md-6 leftStyle">
-      WhatChuWant?
-    </div>
-
-    <div class="col-md-6 rightStyle">
-      WhatChuGitN?
-    </div>
-  </div><!--end row-->
+    <a href="#/whatchuwant">
+      <div class="col-md-6 left-which">
+        WhatChuWant?
+      </div>
+    </a>
+    <a href="#/whatchugitn">
+      <div class="col-md-6 right-which">
+        WhatChuGitN?
+      </div>
+    </a>
+  </div><!--end WhatChu row-->
 </div><!--end container-->
