--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,20 @@
 .navStyle {
   border: 2px solid black; }
 
-.leftStyle {
+.left-which {
   border: 2px solid blue;
-  height: 50px; }
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 25px; }
 
-.rightStyle {
+.right-which {
   border: 2px solid red;
-  height: 50px; }
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 25px; }
+
+.name-which {
+  border: 2px solid purple;
+  text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
