committing before trying

--- a/partials/which.html
+++ b/partials/which.html
@@ -5,12 +5,12 @@
     </div>
   </div><!--end name row-->
   <div class="row row-eq-height">
-    <a href="#/whatchuwant">
+    <a href="#/want">
       <div class="col-md-6 left-which">
         WhatChuWant?
       </div>
     </a>
-    <a href="#/whatchugitn">
+    <a href="#/gitn">
       <div class="col-md-6 right-which">
         WhatChuGitN?
       </div>
