--- a/partials/which.html
+++ b/partials/which.html
@@ -1,9 +1,15 @@
 <div class="container-fluid">
   <div class="row">
+    <div class="col-md-12 profile-image-which">
+      <img src="{{profileImage}}">
+    </div>
+  </div><!--end profile image row-->
+  <div class="row">
     <div class="col-md-12 name-which">
       Greetings {{name}}!
     </div>
   </div><!--end name row-->
+
   <div class="row row-eq-height">
     <a href="#/want">
       <div class="col-md-6 left-which">
