--- a/styles/main.css
+++ b/styles/main.css
@@ -17,4 +17,8 @@
   border: 2px solid purple;
   text-align: center; }
 
+.profile-image-which {
+  border: 2px solid yellow;
+  text-align: center; }
+
 /*# sourceMappingURL=main.css.map */
