--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,11 @@
 }
 
 .name-which {
-  border: 2px solid purple;
+  border: 2px solid purple;  
+  text-align: center;
+}
+
+.profile-image-which {
+  border: 2px solid yellow;
   text-align: center;
 }
