--- a/partials/which.html
+++ b/partials/which.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12 profile-image-which">
-      <img src="{{profileImage}}">
+      <img src="{{profileImageURL}}">
     </div>
   </div><!--end profile image row-->
   <div class="row">
