--- a/partials/which.html
+++ b/partials/which.html
@@ -16,7 +16,7 @@
         WhatChuWant?
       </div>
     </a>
-    <a href="#/gitn">
+    <a href="#/who">
       <div class="col-md-6 right-which">
         WhatChuGitN?
       </div>
