--- a/partials/want.html
+++ b/partials/want.html
@@ -1,7 +1,7 @@
 <img src="{{profileImage}}">
 <div>{{displayName}}'s want list.</div>
 <div>
-  Name: <input type="text" ng-model="newName">
+  Name: <input type="text" ng-model="newName" autofocus>
   Description: <input type="text" ng-model="newDescription">
   Image URL: <input type="text" ng-model="newImage_url">
   Website address where it can be found: <input type="text" ng-model="newThing_url">
