--- a/partials/want.html
+++ b/partials/want.html
@@ -1,5 +1,5 @@
 <img src="{{profileImage}}">
-<div>{{displayName}}'s want list.</div>
+<div>{{displayName}}'s wish list.</div>
 <div>
   Name: <input type="text" ng-model="newName" autofocus>
   Description: <input type="text" ng-model="newDescription">
@@ -10,7 +10,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-12" ng-repeat="thing in userThings">
+    <div class="col-md-4" ng-repeat="thing in userThings">
       <h3>{{thing.name}}</h3>
       <div>{{thing.description}}</div>
       <img src="{{thing.image_url}}" width="300px" alt="picture here">
