--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,27 +1,108 @@
+body {
+  font-family: 'Playfair Display', serif;
+}
+
+.top-and-bottom-padding {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.bottom-margin-30 {
+  margin-bottom: 30px;
+}
+
+.bottom-margin-10 {
+  margin-bottom: 10px;
+}
+
+.top-margin {
+  margin-top: 30px;
+}
+
+.left-bottom-margin {
+  margin: 0 0 30px 30px;
+}
+
+.shadow {
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
+.border {
+  border: 1px solid black;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+.top-and-bottom-margin {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .navStyle {
-  border: 2px solid black;
+  padding: 10px;
+  text-align: center;
 }
 
 .left-which {
-  border: 2px solid blue;
-  text-align: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  font-size: 5em;
+  float: left;
+  margin-left: 10%;
+  padding: 40px;
 }
 
 .right-which {
-  border: 2px solid red;
-  text-align: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  font-size: 5em;
+  float: right;
+  margin-right: 10%;
+  padding: 40px;
 }
 
 .name-which {
-  border: 2px solid purple;  
   text-align: center;
 }
 
 .profile-image-which {
-  border: 2px solid yellow;
   text-align: center;
+}
+
+.round {
+  border-radius: 50%;
+}
+
+.centered {
+  text-align: center;
+}
+
+.want-side-bar {
+  border: 2px solid black;
+  // background-color: #CFF1CF;
+}
+
+.want-divs {
+  width: 280px;
+  // background-color: #FFC6C6;
+}
+
+.floatRight {
+  float: right;
+}
+
+.floatLeft {
+  float: left;
+}
+
+.clear {
+  clear: both;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+li {
+  font-size: 1.7em;
 }
