--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,13 @@ body {
   font-family: 'Playfair Display', serif;
 }
 
+.gitnit {
+  padding: 50px;
+}
+
+.centerButton {
+  margin: 89px 0 0 0;
+}
 .top-and-bottom-padding {
   padding-top: 10px;
   padding-bottom: 10px;
