--- a/partials/gitn.html
+++ b/partials/gitn.html
@@ -2,31 +2,39 @@
   <span class="floatLeft"><a href="#/want" class="btn btn-success btn-lg active" role="button">WhatChaWant?</a></span>
   <span class="floatRight"><a href="#/who" class="btn btn-danger btn-lg active" role="button">WhatChaGitN?</a></span>
 </div>
-<div class="clear">
+<div class="clear bottom-margin-30">
 </div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-md-4" ng-repeat="thing in memberThingsArray">
+  <div class="row bottom-margin-30" ng-repeat="thing in memberThingsArray">
+
+    <div class="col-md-4 centered">
+      <img src="{{thing.image_url}}" height="300">
+    </div>
+
+    <div class="col-md-4">
       <h3>{{thing.name}}</h3>
-      <div>{{thing.description}}</div>
-      <img src="{{thing.image_url}}" width="300px">
+      <div class="bottom-margin-30">{{thing.description}}</div>
       <div>Click <a href="{{thing.thing_url}}">HERE</a> for where to get it.</div>
-      <!-- if no one has commited to getting the gift yet then a button giving the option to get it shows -->
-      <div ng-if="thing.gitnit_id === ''">
-        <button ng-click="gitnit(thing)">I'm GitNit!</button>
+    </div>
+
+    <div class="col-md-4 centered">
+    <!-- if no one has commited to getting the gift yet then a button giving the option to get it shows -->
+      <div ng-if="thing.gitnit_id === ''" class="centerButton">
+        <button ng-click="gitnit(thing)" class="btn btn-primary active gitnit">I'm GitNit!</button>
       </div>
       <!-- if someone has committed to getting the gift already then their picture and name show -->
       <div ng-if="thing.gitnit_id !== ''" class="centered">
-        <img src="{{thing.gitnit_profile_image_url}}" class="round">
+        <img src="{{thing.gitnit_profile_image_url}}" width="150" class="round bottom-margin-10">
         <div>
           {{thing.gitnit_name}}'s GiNit!
         </div>
       </div>
       <!-- if the current user is the one that has committed to getting the gift then the option to renege also shows -->
-      <div ng-if="thing.gitnit_id === userID" class="centered">
-        <button ng-click="oops(thing)">Oops! Nevermind...</button>
+      <div ng-if="thing.gitnit_id === userID" class="top-margin">
+        <button ng-click="oops(thing)" class="btn btn-primary active">Oops! Nevermind...</button>
       </div>
-    </div><!-- end repeat -->
-  </div><!-- end row -->
+    </div>
+
+  </div><!-- end row/repeat -->
 </div><!-- end container -->
