--- a/partials/want.html
+++ b/partials/want.html
@@ -29,8 +29,8 @@
 
           <h3>{{thing.name}}</h3>
           <div class="overflow">{{thing.description}}</div>
-          <img src="{{thing.image_url}}" class="width-100" alt="picture here">
-          <div>Click <a href="{{thing.thing_url}}">HERE</a> for where to get it.</div>
+          <img src="{{thing.image_url}}" class="width-100 bottom-margin-10" alt="picture here">
+          <div class="bottom-margin-10">Click <a href="{{thing.thing_url}}">HERE</a> for where to get it.</div>
           <button ng-click="removeThing(thing)" class="btn btn-primary btn-block active">Remove From Wish List</button>
           <button class="btn btn-primary btn-block active bottom-margin-10" data-toggle="collapse" data-target="#{{$index}}" aria-expanded="false" aria-controls="{{$index}}">Edit</button>
 
