--- a/partials/gitn.html
+++ b/partials/gitn.html
@@ -1,11 +1,12 @@
-<div class="navStyle">
-  <span class="floatLeft"><a href="#/want" class="btn btn-success btn-lg active" role="button">WhatChaWant?</a></span>
-  <span class="floatRight"><a href="#/who" class="btn btn-danger btn-lg active" role="button">WhatChaGitN?</a></span>
-</div>
-<div class="clear bottom-margin-30">
+<div class="stay">
+  <div class="navStyle">
+    <span class="floatLeft"><a href="#/want" class="btn btn-success btn-lg active" role="button">WhatChaWant?</a></span>
+    <span class="floatRight"><a href="#/who" class="btn btn-danger btn-lg active" role="button">WhatChaGitN?</a></span>
+  </div>
+  <div class="clear"></div>
 </div>
 
-<div class="container">
+<div class="container hack-56">
   <div class="row bottom-margin-30" ng-repeat="thing in memberThingsArray">
 
     <div class="col-md-4 centered">
