--- a/partials/want.html
+++ b/partials/want.html
@@ -1,17 +1,19 @@
 <div class="stay">
   <div class="navStyle">
     <span class="floatLeft"><a href="#/want" class="btn btn-success btn-lg active" role="button">WhatChaWant?</a></span>
+    <span class="centered"><a href="#/which" class="btn btn-info btn-lg active" role="button">Home</a></span>
     <span class="floatRight"><a href="#/who" class="btn btn-danger btn-lg active" role="button">WhatChaGitN?</a></span>
   </div>
   <div class="clear"></div>
 
-  <div class="centered bottom-margin-30">
-    <img src="{{profileImage}}" alt="picture here" class="round">
-    <h1>{{displayName}}'s wish list.</h1>
+  <div class="centered">
+    <span><img src="{{profileImage}}" alt="picture here" class="round"></span>
+    <h1 style="display:inline; margin-left:30px">{{displayName}}'s wish list.</h1>
   </div>
 </div>
 
-<div class="container hack-245">
+
+<div class="container hack-180">
   <div class="row"><!-- total row -->
     <div class="col-md-2 want-side-bar"><!--side bar-->
       <div class="top-and-bottom-padding">
@@ -50,9 +52,3 @@
     </div><!-- end main -->
   </div><!-- end total row -->
 </div><!-- end container -->
-
-
-
-
-
-
