--- a/partials/which.html
+++ b/partials/which.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12 profile-image-which">
-      <img src="{{profileImageURL}}" alt="picture here" class="top-margin round">
+      <img src="{{profileImageURL}}" alt="picture here" class="top-margin bigRound">
     </div>
   </div><!--end profile image row-->
   <div class="row bottom-margin-30">
@@ -18,4 +18,9 @@
       <a href="#/who" class="btn btn-danger active right-which" role="button">WhatChaGitN?</a>
     </div>
   </div><!--end Which row-->
+  <div class="row">
+    <div class="col-md-12 centered">
+      <button class="btn btn-info btn-lg active logOutBtn" ng-click="logOut()">Log Out</button>
+    </div>
+  </div><!--end profile image row-->
 </div><!--end container-->
