--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,9 +6,10 @@ body {
   padding: 50px;
 }
 
-.centerButton {
-  margin: 89px 0 0 0;
+.centerVgitOrBtn {
+  margin: 60px 0 0 0;
 }
+
 .top-and-bottom-padding {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -24,6 +25,10 @@ body {
 
 .top-margin {
   margin-top: 30px;
+}
+
+.top-margin-20 {
+  margin-top: 20px;
 }
 
 .left-bottom-margin {
@@ -78,6 +83,14 @@ body {
 
 .round {
   border-radius: 50%;
+  height: 100px;
+  weight: 100px;
+}
+
+.bigRound {
+  border-radius: 50%;
+  height: 150px;
+  weight: 150px;
 }
 
 .centered {
@@ -123,10 +136,31 @@ li {
   z-index: 2;
 }
 
-.hack-245 {
-  margin-top: 245px;
+.hack-180 {
+  margin-top: 180px;
 }
 
-.hack-56 {
-  margin-top: 56px;
+.hack-66 {
+  margin-top: 66px;
+}
+
+.welcome {
+  font-size: 5em;
+  text-align: center;
+  margin-top: 1em;
+}
+
+.welcomeBtn {
+  padding: 40px;
+  margin-top: 3em;
+}
+
+.logOutBtn {
+  padding: 40px;
+  margin-top: 5em;
+}
+
+.gitFit {
+  max-width: 300px;
+  max-height: 300px;
 }
